# fitgirl-ddl-iced

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  model.rs  ui.rs
