[package]
name = "fitgirl-ddl-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
fitgirl-ddl-lib = { git = "https://github.com/mokurin000/fitgirl-ddl", version = "0.1.0", default-features = false, features = ["tokio"] }
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "auto-detect-theme",
    "tokio",
] }
nyquest-preset = { version = "0.1.0", features = ["async"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
