[package]
name = "fitgirl-ddl-iced"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "auto-detect-theme",
    "tokio",
] }
itertools = "0.14.0"
nyquest-preset = { version = "0.1.0", features = ["async"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
fitgirl-ddl-lib = { git = "https://github.com/mokurin000/fitgirl-ddl", version = "0.1.1", default-features = false, features = [
    "tokio",
    "serde",
] }
futures-util = "0.3.31"
tokio = { version = "1.45.1", default-features = false, features = [
    "sync",
    "process",
    "fs",
] }
ahash = "0.8.12"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
